# gizmo

./: .clang-format  README.md  TODOLIST  meson.build
docs/: STYLE
include/: libraries.h  utils.h
modules/audio/: meson.build
modules/audio/include/audio/: audio.h
modules/audio/src/: audio.c
modules/dyarr/: meson.build
modules/dyarr/include/dyarr/: dyarr.h
modules/dyarr/src/: dyarr.c
modules/event/: meson.build
modules/event/include/event/: event.h
modules/event/src/: event.c
modules/gl_renderer/include/renderer/: renderer.h
modules/gl_renderer/src/: renderer.c  shader.c
modules/glfw_window/: meson.build
modules/glfw_window/include/window/: keys.h  window.h
modules/glfw_window/src/: window.c
modules/io/: meson.build
modules/io/include/io/: io.h
modules/io/src/: io_linux.c
modules/memarena/: meson.build
modules/memarena/include/memarena/: memarena.h
modules/memarena/src/: memarena.c
modules/renderer/: meson.build
modules/renderer/include/: shader.h
modules/renderer/include/glad/: glad.h
modules/renderer/include/renderer/: renderer.h
modules/renderer/src/: glad.c  renderer.c  shader.c
modules/sdl_window/: meson.build
modules/sdl_window/include/window/: window.h
modules/sdl_window/src/: window.c
modules/vk_renderer/src/: glad.c  renderer.c
modules/window/: meson.build
modules/window/include/window/: window.h
modules/window/src/: window.c
scripts/: list-all-src.sh
src/: main.c
